@startuml
'https://plantuml.com/class-diagram

'abstract class AbstractList
'abstract AbstractCollection
'interface List
'interface Collection

'List <|-- AbstractList
'Collection <|-- AbstractCollection
'
'Collection <|- List
'AbstractCollection <|- AbstractList
'AbstractList <|-- ArrayList

class Client {
int id
String firstName
String lastName
List<Book> books
}

class Book {
int id
String title
Client client
}

Client --{Book
Book -|{ Client
'
'enum TimeUnit {
'DAYS
'HOURS
'MINUTES
'}

@enduml